# zip2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  LZMA_FIX_SUMMARY.md  README.md  SECURITY.md  build-fuzz-corpus-multiple-restarts.sh  build-fuzz-corpus-multiple-sizes.sh  compile_test.rs  debug_lzma.rs  debug_test.rs  fuzz-until-converged.sh  pull_request_template.md  recursive-fuzz-cmin.sh  run_test.sh  simple_test.rs  test_fix.rs  test_jna.rs  test_lzma.rs  validate_fix.rs
cli/: Cargo.toml
cli/clite/: Cargo.toml
cli/src/: args.rs  compress.rs  extract.rs  info.rs  lib.rs  main.rs  print.rs  schema.rs
cli/src/args/: compress.rs  extract.rs  info.rs
cli/src/extract/: entries.rs  matcher.rs  named_outputs.rs  receiver.rs  transform.rs
cli/src/info/: directives.rs  formats.rs
cli/src/schema/: cli.rs  values.rs
fuzz/: .gitignore  Cargo.toml  fuzz.dict
fuzz/corpus/fuzz_write/: oom-15a6fe6c651ec11a9ff68cf22130cdcf4cd8b2dd  oom-1e80aa72733301ee4faefb49656a47ca4ebf4d9e  oom-29de266554a1d37e4d0191555edefc1bcff3cf61  oom-3f8d7a407e0602bac3848ef0d23e07897fcd6813  oom-4725419c353813e1276bf92392da2b760138b554  oom-4fc194e1990d948e78805af704f2aba9fc413046  oom-559d62e688d58a19c01d47b31d2f8815d2a7539c  oom-6548b2feffd864a13dc4fcb6a3c32a50115709c3  oom-81409a166cae373b66e60afc5378f4aebe7e4b16  oom-82fa66c375e5f0a9aa583a3e4f05088a8f9e3c7f  oom-84822c9919f05bb16f5bab1091b0fb59f3130d93  oom-894ed2b1a5e272793a9d837e3f81d1ede91e732e  oom-a2b066eba7c144fa5eab76fbf37166d0d54e7850  oom-b1ff7f394e373f0009785862de64a4ad54011ad3  oom-ce76f6caa8d4910b5194efa544c48dfe403cc800  oom-d9425c57b751e88dbae9ae92fe112bfbe667dc88  oom-dc60f29fe1dd06fff41002c0b98ca957b43d80c5  oom-df294eaae77b57dbec760410dad11b7287fa1032  oom-fd1c9c9147db29d354d3fa3d75c769b3d7ff3465
fuzz/fuzz_targets/: fuzz_read.rs  fuzz_write.rs
fuzz/read/: Cargo.toml
fuzz/read/in/: id-000001,time-0,execs-0,orig-00723069d9adfb794ee55f7de3dd32cc72fe9256.min  id-000002,time-0,execs-0,orig-0102a133e458503e63ead5bf560953b3961f5177.min  id-000005,time-0,execs-0,orig-02b7f8595abd6cabb8137568eac45c5917fb335a.min  id-000007,time-0,execs-0,orig-033b3a8e4291c627c566c960b412218dc9c3b387.min  id-000010,time-0,execs-0,orig-03e460a5fb88bd75dae53b3f23b20077f5584e2f.min  id-000012,time-0,execs-0,orig-04e9f47cfdcc6714e26119c81026a513408851bc.min  id-000013,time-0,execs-0,orig-050f4aaaae60d39ea2d8ae07f261bd40b533a298.min  id-000014,time-0,execs-0,orig-05389cd3ace10887421d6c8b9bd18de221b896d7.min  id-000016,time-0,execs-0,orig-05df85ce6e11b24b4cc1feb23e6c296377a77d75.min  id-000019,time-0,execs-0,orig-06b27355bfbeb109c204dca98d63f7eb8f523a25.min  id-000020,time-0,execs-0,orig-0706fcbae9a4d765f4b331cd1e90d457f66ab108.min  id-000022,time-0,execs-0,orig-071dd068961f2ffc0b45ffe6e4121ab8b97e91f0.min  id-000025,time-0,execs-0,orig-07c2d49afb74705dde91d88e41a547028f9d05c6.min  id-000026,time-0,execs-0,orig-084817f6b18a9f4445fd1a62964d1e038a0b5c09.min  id-000028,time-0,execs-0,orig-0980524e9bc509225f707b6a1c543ae8687f47d2.min  id-000029,time-0,execs-0,orig-09d7d004295ea6ae0de1ecf7a300f7d242dfbc9d.min  (+296 more)
fuzz/read/src/: main.rs
fuzz/write/: Cargo.toml  fuzz.dict
fuzz/write/src/: main.rs
fuzz_write/: Cargo.toml
fuzz_write/in/: id-000001,time-0,execs-0,orig-005ce0b35007051f71bdc9230186b77502e4ef21.min  id-000002,time-0,execs-0,orig-01d368a6ff11040b6f1b35ef47d85b4433305779.min  id-000011,time-0,execs-0,orig-08eda80460471ba9773bc44f191863d6d1577891.min  id-000016,time-0,execs-0,orig-0c49bfd6d4e0d88a704516656b9a3bbb7c783942.min  id-000029,time-0,execs-0,orig-1efcf7b88d512e01efc2e780414217147d06c0c2.min  id-000055,time-0,execs-0,orig-37ba13ef9b465c75ed9615d31aa6a6e0ab16f01c.min  id-000068,time-0,execs-0,orig-449f3a0f1a4809980afa0935de9ed73007f5b0c8.min  id-000077,time-0,execs-0,orig-4bad5928bd6e531c412a65dabc8d223787c0bf91.min  id-000081,time-0,execs-0,orig-4fadf7bb42858316d7133ff34720f3c3be11fb18.min  id-000096,time-0,execs-0,orig-5f28b85fb0b8c0ba4d6ed8ddf5978831f00ab209.min  id-000105,time-0,execs-0,orig-6d0b9ea5d5bfc732741fe80e6cb2d3a222dd18ed.min  id-000130,time-0,execs-0,orig-884d031d44e9f22e8844bad8a8fbc55121ac4956.min  id-000134,time-0,execs-0,orig-8928dea6fb8ed064320498cdd365ad01658a9af8.min  id-000139,time-0,execs-0,orig-8fb8f1e3871cc65e00e06ccfa19fe199e6d5b570.min  id-000155,time-0,execs-0,orig-9bb75f331a5228c1b1ad49f6a5fde8db4c281572.min  id-000162,time-0,execs-0,orig-a105632d3737bd0ee0ce4565416222a08da790dc.min  id-000165,time-0,execs-0,orig-a64ec70e389aabf2a8db8d0d3bac975a0547d15b.min  id-000166,time-0,execs-0,orig-a7ac5e644bc0b1b0a08dc98591a0b19c9c69fc53.min  id-000188,time-0,execs-0,orig-b8c7840a466e001b34734341b30a76f6d8a7616f.min  id-000191,time-0,execs-0,orig-bbd983fe695ae31f186df3a0051c21d10da1dd84.min  id-000205,time-0,execs-0,orig-ce43f4e0ea21e1ba725dd5d6c3fa9671e131725a.min  id-000219,time-0,execs-0,orig-df61b9c09f5b13a6b4fb92ac7bda73d1674cc8b7.min  id-000221,time-0,execs-0,orig-e13f30b553c75b1c5c067519cb02dcbaac1caae7.min  id-000227,time-0,execs-0,orig-e4dfa7eea7eda27b63f304df49f709d56a9d1bb7.min  id-000241,time-0,execs-0,orig-f0006b3c96181456a95e0c65fd5b095fde4adc6a.min  id-000267,src-000167,time-307,execs-2409,op-colorization,rep-2  id-000310,src-000167,time-2300,execs-3155,op-havoc,rep-6,+cov  id-000332,src-000167,time-3167,execs-3570,op-havoc,rep-8,+cov  id-000337,src-000167,time-3542,execs-3668,op-havoc,rep-3,+cov  id-000375,src-000167,time-5786,execs-4554,op-havoc,rep-5  id-000382,src-000167,time-6082,execs-4681,op-havoc,rep-1  id-000383,src-000167,time-6194,execs-4708,op-havoc,rep-6  id-000407,src-000167,time-7957,execs-5383,op-havoc,rep-4  id-000437,src-000167,time-10682,execs-6481,op-havoc,rep-8  id-000450,src-000167,time-11776,execs-6844,op-havoc,rep-8,+cov  id-000516,src-000167,time-17745,execs-9074,op-havoc,rep-8  id-000527,src-000167,time-18843,execs-9484,op-havoc,rep-8  id-000530,src-000167,time-19120,execs-9579,op-havoc,rep-4  id-000531,src-000167,time-19267,execs-9606,op-havoc,rep-5  id-000538,src-000167,time-19929,execs-9925,op-havoc,rep-4  (+439 more)
fuzz_write/src/: main.rs
(+960 files in other folders)
