[package]
name = "zip"
version = "6.0.0"
authors = [
    "Mathijs van de Nes <git@mathijs.vd-nes.nl>",
    "Marli Frost <marli@frost.red>",
    "Ryan Levick <ryan.levick@gmail.com>",
    "Chris Hennick <hennickc@amazon.com>",
]
license = "MIT"
repository = "https://github.com/zip-rs/zip2.git"
keywords = ["zip", "archive", "compression"]
# Any change to rust-version must be reflected also in `README.md` and `.github/workflows/ci.yaml`.
# The MSRV policy is documented in `README.md`.
rust-version = "1.83.0"
description = """
Library to support the reading and writing of zip files.
"""
edition = "2021"

[dependencies]
opendal = { version = "0.54.0", features = ["services-ghac"] }
anyhow = "1.0.96"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }