[package]
name = "zip"
version = "8.5.2"
authors = [
    "Mathijs van de Nes <git@mathijs.vd-nes.nl>",
    "Marli Frost <marli@frost.red>",
    "Ryan Levick <ryan.levick@gmail.com>",
    "Chris Hennick <hennickc@amazon.com>",
]
license = "MIT"
repository = "https://github.com/zip-rs/zip2"
keywords = ["zip", "archive", "compression"]
# Any change to rust-version must be reflected also in `README.md` and `.github/workflows/ci.yaml`.
# The MSRV policy is documented in `README.md`.
rust-version = "1.88"
categories = ["compression", "filesystem", "parser-implementations"]
description = "Library to support the reading and writing of zip files."
edition = "2024"
exclude = ["tests/**", "examples/**", ".github/**", "fuzz/**", ".amazonq/**", "benches/**", ".typos.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arbitrary = { version = "1.4", features = ["derive"], optional = true }
aes = { version = "0.8", optional = true }
bzip2 = { version = "0.6", default-features = false, optional = true }
chrono = { version = "^0.4.27", optional = true, default-features = false, features = ["std"] }
constant_time_eq = { version = "0.4", optional = true }
crc32fast = "1.5"
flate2 = { version = "1.1", default-features = false, optional = true }
hmac = { version = "0.12", optional = true, features = ["reset"] }
indexmap = "2"
jiff = { version = "^0.2.4", optional = true }
memchr = "2.7"
nt-time = { version = "0.13", default-features = false, optional = true }
ppmd-rust = { version = "1.4", optional = true }
pbkdf2 = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
zeroize = { version = "1.8", optional = true }
zstd = { version = "^0.13.3", optional = true, default-features = false }
zopfli = { version = "^0.8.3", optional = true }
deflate64 = { version = "^0.1.10", optional = true }
lzma-rust2 = { version = "^0.16.1", optional = true, default-features = false, features = ["std", "encoder", "optimization", "xz"] }
bitstream-io = { version = "4.9", optional = true }
typed-path = "0.12"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.4", default-features = false, optional = true }
time = { version = "^0.3.47", default-features = false, optional = true, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
getrandom = { version = "0.4", default-features = false }

# wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", default-features = false, features = ["wasm_js"], optional = true }
time = { version = "^0.3.47", default-features = false, optional = true, features = [
    "std",
    "wasm-bindgen"
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.4", default-features = false, features = ["wasm_js"] }
wasm-bindgen-test = "^0.3.56"

[dev-dependencies]
bencher = "0.1"
getrandom = { version = "0.4", default-features = false }
walkdir = "2.5"
time = { version = "^0.3.47", features = ["formatting", "macros"] }
clap = { version = "^4.4.18", features = ["derive"] }
tempfile = "3.15"
rayon = "1.11"

[features]
_arbitrary = ["dep:arbitrary"]
aes-crypto = ["dep:aes", "dep:constant_time_eq", "getrandom/std", "dep:hmac", "dep:pbkdf2", "dep:sha1", "dep:zeroize"]
chrono = ["dep:chrono"]
_deflate-any = []
deflate = ["deflate-zopfli", "deflate-flate2-zlib-rs"]
# Pull in flate2, but don't choose a backend; useful if you want to choose your own flate2 backend
deflate-flate2 = ["_deflate-any", "dep:flate2"]
# Pull in flate2 and the fast zlib-rs backend; this is what most users will want
deflate-flate2-zlib-rs = ["deflate-flate2", "flate2/zlib-rs"]
# Pull in zopfli (write-only DEFLATE, slower than flate2 with better compression ratios)
deflate-zopfli = ["dep:zopfli", "_deflate-any"]
# Enables conversion to/from time::OffsetDateTime if `time` is also enabled, even though ZIP-file timestamps don't include a time zone.
# This feature will be removed in version 9.0.0.
deprecated-time = []
jiff-02 = ["dep:jiff"]
nt-time = ["dep:nt-time"]
lzma = ["dep:lzma-rust2"]
ppmd = ["dep:ppmd-rust"]
# This feature allows writing custom extra-data field IDs in file headers.
unreserved = []
xz = ["dep:lzma-rust2"]
_bzip2_any = []
bzip2 = ["dep:bzip2", "bzip2/default", "_bzip2_any"]
legacy-zip = ["bitstream-io"]
time = ["dep:time"]
default = [
    "aes-crypto",
    "bzip2",
    "deflate64",
    "deflate",
    "lzma",
    "ppmd",
    "time",
    "zstd",
    "xz",
]

# The following features are not supported on wasm
bzip2-rs = ["dep:bzip2", "bzip2/bzip2-sys", "_bzip2_any"]
# Pull in flate2 and the zlib backend; only use this if you need a dynamically linked system zlib
deflate-flate2-zlib = ["deflate-flate2", "flate2/zlib"]
# Pull in flate2 and the zlib-ng backend; a modern fork of zlib
deflate-flate2-zlib-ng = ["deflate-flate2", "flate2/zlib-ng"]
# Pull in flate2 and the zlib-ng backend with a zlib-compatible API
deflate-flate2-zlib-ng-compat = ["deflate-flate2", "flate2/zlib-ng-compat"]

[[bench]]
name = "read_entry"
harness = false

[[bench]]
name = "read_metadata"
harness = false

[[bench]]
name = "read_many_entries"
harness = false

[[bench]]
name = "merge_archive"
harness = false



[lints.rust]
unused_qualifications                = "warn"
redundant_imports                    = "warn"
# Note: I basically went through every allow-by-default lint, and am linting against
# almost everything, except lints just related to migrating to Edition 2018, 2021, or 2024;
# since this codebase is in Edition 2024, those lints don't have any use here.

ambiguous_negative_literals          = "warn"
closure_returning_async_block        = "warn"
deprecated_in_future                 = "warn"
deref_into_dyn_supertrait            = "warn"
elided_lifetimes_in_paths            = "warn"
explicit_outlives_requirements       = "warn"
ffi_unwind_calls                     = "warn"
impl_trait_redundant_captures        = "warn"
let_underscore_drop                  = "warn"
macro_use_extern_crate               = "warn"
# Note: this lint may have false positives.
meta_variable_misuse                 = "warn"
# Note: may be a noisy lint, but explicitly disabling it when necessary should be less error-prone
# than remembering to derive Copy in almost all applicable cases
missing_copy_implementations         = "warn"
missing_debug_implementations        = "warn"
missing-unsafe-on-extern             = "warn"
non_ascii_idents                     = "warn"
redundant_lifetimes                  = "warn"
# The below lint seems like it might still be worth enabling in Edition 2024; idk, default to "sure"
rust_2024_incompatible_pat           = "warn"
# Note: this lint may have false positives.
single_use_lifetimes                 = "warn"
unexpected_cfgs                      = { level = "warn", check-cfg = [
    'cfg(skiplist_loom)',
    'cfg(skiplist_loom_hard)',
    'cfg(miri)',
    'cfg(tests_with_leaks)',
] }
unit_bindings                        = "warn"
unnameable_types                     = "warn"
unreachable_pub                      = "warn"
# Note: this lint could have false positives in a package with multiple crates.
# Here, the packages have one crate each, so it's fine.
unused_extern_crates                 = "warn"
unused_import_braces                 = "warn"
unused_lifetimes                     = "warn"
unused_macro_rules                   = "warn"
variant_size_differences             = "warn"

# TODO: lint against missing documentation
# missing_docs                         = "warn"

future_incompatible                  = { level = "warn", priority = -1 }
keyword-idents                       = { level = "warn", priority = -1 }
# Currently, every lint in the `nonstandard_style` group is actually warn-by-default already.
nonstandard_style                    = { level = "warn", priority = -1 }

# Note that the `unused_results` lint is intentionally left as `allow`
# `linker-messages` is left as `allow` in absence of a reason to worry about the linker

# I would enable the following lints if possible, but they're unstable as of the middle of 2025:
#   - fuzzy_provenance_casts
#   - lossy_provenance_casts
#   - multiple_supertrait_upcastable
#   - must_not_suspend
#   - non_exhaustive_omitted_patterns
#   - resolving_to_items_shadowing_supertrait_items
#   - shadowing_supertrait_items
#   - unqualified_local_imports
# `just clippy` and friends will use the above lints on the nightly channel.


[workspace.lints.clippy]
# Note: the strategy here, unlike with rust lints, is to just enable everything, and carve out
# exceptions as needed.
# See clippy.toml as well.


# Defaults
correctness = { level = "deny", priority = -1 }

suspicious  = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }

# The rest
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
cargo       = { level = "warn", priority = -1 }


# Warnings that should eventually be enabled
missing_docs_in_private_items       = "allow"
missing_errors_doc                  = "allow"
todo                                = "allow"


# Correctness exceptions: there are none.


# Suspicious exceptions

# Yes, it's normally an awful idea to blanket-enable the `restriction` group,
# but it's easier to be warned about a dumb lint and disable it below
# than to figure out in advance which ones deserve to be enabled.
blanket_clippy_restriction_lints    = "allow"


# Style exceptions

# `parse` seems too opaque, the meaning of the `from_str_radix` method is immediately clear.
from_str_radix_10                   = "allow"
# I think `(3..8).contains(x)` looks worse than `3 <= x && x < 8`.
manual_range_contains               = "allow"
# Sometimes I like to be more explicit.
unwrap_or_default                   = "allow"


# Complexity exceptions

# Sometimes helpful with rust-analyzer to not have a super-long type hint.
let_with_type_underscore            = "allow"


# Pedantic exceptions

bool_to_int_with_if                 = "allow"
# `map(..).unwrap_or(..)` is, I think, more readable than `map_or(.., ..)`.
map_unwrap_or                       = "allow"
redundant_else                      = "allow"


# Restriction exceptions

# `#[allow]` attributes should be used sparingly, but it's more convenient to simply be able
# to use them when necessary, without extra shenanigans.
# `just find-allow-attributes` can show where any `[allow(` string is, to find the attributes.
allow_attributes                    = "allow"
arbitrary_source_item_ordering      = "allow"
arithmetic_side_effects             = "allow"
decimal_literal_representation      = "allow"
# A good lint, but the various "*_fs" modules in anchored-vfs have so many similar structs,
# no point in adding weird acronym prefixes instead of leaving them namespaced.
error_impl_error                    = "allow"
# Most enums and structs don't need to be #[non_exhaustive] for the sake of semver.
exhaustive_enums                    = "allow"
exhaustive_structs                  = "allow"
# Similar to map_unwrap_or and whatnot
if_then_some_else_none              = "allow"
implicit_return                     = "allow"
integer_division_remainder_used     = "allow"
little_endian_bytes                 = "allow"
missing_trait_methods               = "allow"
missing_inline_in_public_items      = "allow"
mod_module_files                    = "allow"
multiple_inherent_impl              = "allow"
# The extra verbosity seems unnecessary
pattern_type_mismatch               = "allow"
pub_use                             = "allow"
pub_with_shorthand                  = "allow"
separated_literal_suffix            = "allow"
shadow_reuse                        = "allow"
shadow_same                         = "allow"
single_call_fn                      = "allow"
single_char_lifetime_names          = "allow"
# Would only make sense in a #[no_std] crate
std_instead_of_alloc                = "allow"
std_instead_of_core                 = "allow"
question_mark_used                  = "allow"
# This is covered by the `unwrap_used` lint, and seems to be more annoying to `#[expect]`.
unwrap_in_result                    = "allow"


# Nursery exceptions

# I find `if let` and `else` to look much better than `map_or_else`.
option_if_let_else                  = "allow"
# I prefer the redundant item-level pub(crate)'s, and unreachable impl-level pub's elsewhere.
redundant_pub_crate                 = "allow"
# Doesn't really help much, and `#[expect]`ing it is a hassle. Might be good to run the lint
# once in a while, though.
significant_drop_tightening         = "allow"


[workspace.lints.rustdoc]
all = { level = "warn", priority = -1 }
