[workspace]
members = ["read", "write"]
default-members = []
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
afl = "0.15"
arbitrary = { version = "1.4.1", features = ["derive"] }
tikv-jemallocator = "0.6.0"
zip = { path = "..", default-features = false, features = ["_arbitrary"] }
