[package]
name = "fuzz_write"
version = "0.1.0"
edition = "2021"

[dependencies]
afl = "0.15.10"
arbitrary = { version = "1.3.2", features = ["derive"] }
replace_with = "0.1.7"
tikv-jemallocator = "0.6.0"

[dependencies.zip]
path = ".."
default-features = false

[features]
zip-default = ["zip/default"]

[workspace]